# floo-netwok

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md  web.sh
src/: CMakeLists.txt  appConfig.hpp.in  assets.qrc  core.cpp  main.cpp  web.qrc
src/models/: channel.cpp  channel.hpp  connection.cpp  connection.hpp  file.cpp  file.hpp  myFile.cpp  myFile.hpp
src/network/: client.cpp  client.hpp  httpReceiver.cpp  httpReceiver.hpp  httpSender.cpp  httpSender.hpp  receiveManager.cpp  receiveManager.hpp  receiver.cpp  receiver.hpp  sendManager.cpp  sendManager.hpp  sender.cpp  sender.hpp  server.cpp  server.hpp  tcpReceiver.cpp  tcpReceiver.hpp  tcpSender.cpp  tcpSender.hpp  webServer.cpp  webServer.hpp
src/persistence/: persistence.cpp  settings.cpp  settings.hpp
src/utils/: utils.cpp  utils.hpp
src/widgets/: ClientChannel.qml  CreateChannelDialog.qml  File.qml  Home.qml  JoinChannelDialog.qml  LinkLabel.qml  MainWindow.qml  MainWindowMenuBar.qml  MyFile.qml  NavButton.qml  Navbar.qml  Receiver.qml  Receives.qml  Sender.qml  Sends.qml  ServerChannel.qml  Settings.qml  Tag.qml  Tray.qml
